@@ -1,0 +1,76 @@
+<!DOCTYPE html>
+
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name="author" content="BELLOC Boris">
+  <link rel="shortcut icon" type="image/png" href="../img/poc.png" />
+
+
+  <style>
+    body {
+      background-color: lightblue;
+      color: #ffffff;
+    }
+
+    .textContainer {
+      background: coral;
+      border: 1px solid rgb(238, 71, 10);
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+      position: relative;
+      width: 200px;
+      margin-left: 20px;
+    }
+
+    .textContainer:before {
+      position: absolute;
+      display: inline-block;
+      border-top: 7px solid transparent;
+      border-right: 7px solid transparent;
+      border-bottom: 7px solid transparent;
+      border-right-color: rgb(238, 71, 10);
+      left: -8px;
+      top: 20px;
+      content: '';
+    }
+
+    .textContainer:after {
+      position: absolute;
+      display: inline-block;
+      border-top: 6px solid transparent;
+      /* Paint the arrow : */
+      border-right: 6px solid coral;
+      border-bottom: 6px solid transparent;
+      left: -6px;
+      top: 21px;
+      content: '';
+    }
+  </style>
+
+
+
+  <title>POC: CSS triangle with shadow </title>
+</head>
+
+<body>
+
+  <!-- CONTENT -->
+
+
+  <div class="textContainer">
+    My name is BELLOC Boris;
+    <br><br>
+    this is some random text to make a content inside the textContainer.
+    <br><br>
+    Today is the 28th day of may 2019.
+  </div>
+
+
+  <!-- CONTENT -->
+
+
+</body>
+
+</html>
